k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-demo-service
spec:
  selector:
    app: saas-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
