k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saas-demo-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:847471067726:certificate/62b0a17f-7a89-4ffc-882f-f8963bff59c8
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: saas-demo
spec:
  ingressClassName: alb
  rules:
  - host: saasdemo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: saas-demo-service
            port:
              number: 80
